[tool.poetry]
name = "adm_hw4"
version = "0.1.0"
description = ""
authors = ["micferr <micfer96@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.0"
librosa = "^0.8.1"
scipy = "^1.7.3"
numpy = "^1.21.4"
jupyter = "^1.0.0"
matplotlib = "^3.5.0"
tqdm = "^4.62.3"
pandas = "^1.3.4"
sklearn = "^0.0"
simpy = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
